<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/sortlayout"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/sortText"
            android:textStyle="bold"/>

        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroupSort"
            >

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/pricesort"
                android:text="@string/price"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/ratingsort"
                android:text="@string/rating"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/discountsort"
                android:text="@string/disc"/>
        </RadioGroup>

    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        android:padding="0dp"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:background="@color/colorprop"
        android:popupBackground="@color/colorprop"
        android:layout_below="@id/sortlayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner"
        android:scrollbars="vertical">

    </android.support.v7.widget.RecyclerView>



</RelativeLayout>
