<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.appdoor.sid.myday.ReadActivity"
    tools:showIn="@layout/app_bar_read">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.hackerearth.sid.dailyfeed.ReadActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#d3d3d3"
                android:textAppearance="?android:attr/textAppearanceLarge"

                android:textColor="#000000" />


            <ImageView
                android:id="@+id/imageViewContent"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/thumbnail_height"
                android:layout_below="@id/name" />


            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageViewContent"
                android:paddingTop="10dp"/>

            <LinearLayout
                android:id="@+id/subcontentlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cityText"
                        android:text="@string/cityName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/effective_priceText"
                        android:text="@string/price"
                        android:textStyle="bold"/>

                    <TextView
                        android:text="@string/actualprice"
                        android:id="@+id/actual_priceText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        />



                    <TextView
                        android:text="@string/disc"
                        android:id="@+id/discountText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        />


                    <TextView
                        android:text="@string/loc"
                        android:id="@+id/locationText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:text="@string/rating"
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/effective_price"/>

                    <TextView
                        android:id="@+id/actual_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        />

                    <TextView
                        android:id="@+id/discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        />


                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        />

                    <RatingBar
                        android:id="@+id/rating"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="true"
                        android:stepSize="1"
                        style="?android:attr/ratingBarStyleSmall"

                        />
                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
